--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body, button, input{
     font-family: 'Inter', sans-serif;
+}
+
+nav {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.nav-icons > ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10px;
 }
