--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 @tailwind base;
   @tailwind components;
   @tailwind utilities;
@@ -72,5 +74,7 @@
     }
     body {
       @apply bg-background text-foreground;
+      width: 100vw;
+      height: 100vh;
     }
   }
